package monitor.http;

message http_request{
	optional int64 timestamp = 1;
	optional string hostname = 2;
	optional string server_name = 3;
	optional string server_ip = 4;
	optional string protocol = 5;    
	optional string http_user = 6;
	optional string method = 7;
	optional string resource = 8;
	optional string query = 9;
	optional string full_request = 10;
	optional int32 http_code = 11;
	optional string conn_status = 12;
	optional int64 content_size = 13;
	optional string time_to_serve = 14;
	optional string header_referer = 15;
	optional string header_user_agent = 16;
	optional string header_accept = 17;
	optional string header_accept_language = 18;
	optional string file = 19;
}

